--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@tailwindcss/vite": "^4.1.5",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"tailwindcss": "^4.1.5"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
 		"@types/react-dom": "^18.2.22",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
-		"@vitejs/plugin-react": "4.2.1",
+		"@vitejs/plugin-react": "^4.4.1",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.6",
 		"typescript": "5.2.2",
-		"vite": "6.3.4"
+		"vite": "^6.3.5"
 	}
 }
